Add recipe webpage

--- a/recipes/lamb-pilaf.html
+++ b/recipes/lamb-pilaf.html
@@ -6,6 +6,67 @@
     </head>
 
     <body>
-        <h1>Lamb Pilaf Rice</h1>
+        <h1>Uyghur Lamb Pilaf</h1>
+        <img src="../images/lamb-pilaf.jpg" alt="a colorful plate with lamb, 
+        rice, and carrots" width="750" height="1125">
+        
+        <h2>Description</h2>
+        <p>Lamb pilaf is one of the main staple traditional dishes of the
+            Uyghur people in China. It's typically eaten with families, 
+            friends, and neighbors in a communal setting, but you may also
+            find it served in many restaurants in single servings as well.
+            It is made with very few ingredients and in very simple steps.
+            It's rich flavor comes from the perfect combination of it's 
+            ingredients.
+        </p>
+        
+        <h2>Ingredients</h2>
+        <ul>
+            <li>lamb of choice 1 lb</li>
+            <li>onion 1 large</li>
+            <li>carrot 2 large</li>
+            <li>white rice 1.5 cup</li>
+            <li>avocado oil 50ml</li>
+            <li>water</li>
+            <li>salt 10g</li>
+            <li>cumin 10g</li>
+        </ul>
+
+        <h2>Steps</h2>
+        <ol>
+            <li>Rinse the rice several times and let it soak for 30mins.</li>
+            <li>Cut the lamb into chunks. Slice the onion and carrot into
+                slices of about 0.8cm wide.
+            </li>
+            <li>(Optional) If lamb has a very strong odor or you just 
+                don't like the smell of lamb, put it into a pot with water
+                and bring to boil. Once boiled, add in some coriander,
+                sichuan peppercorn, and cooking wine. Let it boil for a few
+                more minutes. Take the lamb out and rinse it under hot water.
+            </li>
+            <li>Add oil to a deep pan. When it reaches high heat, add onion 
+                to the pan and cook until it becomes transparent. Then add meat
+                to the pan and cook until it's color slightly browns. Then take
+                out the onion and meat. 
+            </li>
+            <li>Add carrots to the pan and cook until it becomes soft.
+            </li>
+            <li>Add the onion and meat back into the pan. Add salt and cumin
+                and cook for a few minutes. Then add water to cover the 
+                ingredients and bring to a boil with cover on.
+            </li>
+            <li>Once boiled, lower it to a simmer. Add in the soaked rice
+                and lay it evenly on top of the other ingredients. (Optional:
+                Add in as much raisin as you'd like at this point.) Make a
+                few holes in the layer of rice. Let it simmer on low for 35
+                minutes. Check occasionally to make sure it doesn't dry out and
+                burn.
+            </li>
+            <li>Open the lid and make sure water from the lid doesn't drip 
+                back onto the rice. Stir and mix all the ingredients from the 
+                bottom of pan.
+            </li>
+            <li>Serve.</li>
+        </ol>
     </body>
 </html>
