--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
 
     <body>
         <h1>Odin Recipes</h1>
-        <a href="./recipes/lamb-pilaf.html">Lamb Pilaf Rice</a>
+        <a href="./recipes/lamb-pilaf.html">Uyghur Lamb Pilaf</a>
     </body>
 </html>
