Add new webpage and content

--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
 
     <body>
         <h1>Odin Recipes</h1>
-        <a href="./recipes/lamb-pilaf.html">Uyghur Lamb Pilaf</a>
+        <ul>
+            <li><a href="./recipes/lamb-pilaf.html">Uyghur Lamb Pilaf</a></li>
+            <li><a href="./recipes/big-plate-chicken.html">Big Plate Chicken</a></li>
+        </ul>
     </body>
 </html>
