--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
         <ul>
             <li><a href="./recipes/lamb-pilaf.html">Uyghur Lamb Pilaf</a></li>
             <li><a href="./recipes/big-plate-chicken.html">Big Plate Chicken</a></li>
+            <li><a href="./recipes/mapo-tofu.html">Mapo Tofu</a></li>
         </ul>
     </body>
 </html>
