Add link for reference

--- a/recipes/big-plate-chicken.html
+++ b/recipes/big-plate-chicken.html
@@ -100,5 +100,9 @@
                 soak up all the aromatic sauce. Enjoy!!
             </li>
         </ol>
+
+        <a href="https://www.dolanchick.com/blog-uyghur-food-recipes/how-to-make-chicken-stew-big-plate-chicken-da-pan-ji">
+            Link to original recipe
+        </a>
     </body>
 </html>
