--- a/recipes/lamb-pilaf.html
+++ b/recipes/lamb-pilaf.html
@@ -68,5 +68,9 @@
             </li>
             <li>Serve.</li>
         </ol>
+
+        <a href="https://www.youtube.com/watch?v=Z9iF5psCn80">Link to original 
+            recipe
+        </a>
     </body>
 </html>
