--- a/recipes/mapo-tofu.html
+++ b/recipes/mapo-tofu.html
@@ -71,5 +71,7 @@
                 dish and serve over rice. 
             </li>
         </ol>
+
+        <a href="https://www.dealmoon.com/guide/946743">Link to original recipe</a>
     </body>
 </html>
