Add missing instruction and fix grammar

--- a/recipes/mapo-tofu.html
+++ b/recipes/mapo-tofu.html
@@ -37,6 +37,7 @@
         <ol>
             <li>Put Sichuan peppercorn into pan on low heat. Stir to bring
                 out the aroma of the peppercorn. 2 to 3 minutes will suffice.
+                Remove to cool.
             </li>
             <li>Once the temperature of the peppercorn has cooled, ground the 
                 peppercorn into powder.
@@ -45,16 +46,16 @@
                 tofu into the pot and bring to a boil. Once boiled, turn 
                 off the heat.
             </li>
-            <li>On a cutting board, chop up about 3 spoonful of Bean paste and
-                a couple fermented black beans together. 
+            <li>On a cutting board, chop up about 3 spoonful of Bean paste 
+                (Dou ban jiang) and a couple fermented black beans together. 
             </li>
             <li>Mince up some scallion, ginger, and garlic.</li>
             <li>In a hot pan, add in oil. Add in the ground pork and cook 
                 until the color changes. Then add in the bean paste mixture.
-                Stir to cover and color all the meat. Add in the minced 
+                Cook to cover all the meat. Add in the minced 
                 scallion, ginger, and garlic. Continue to stir.
             </li>
-            <li>Add in chili flakes and stir to cover everything. Add in 
+            <li>Add in chili flakes and stir to mix with everything. Add in 
                 cooking wine, light soy sauce, dark soy sauce, and continue 
                 to stir.
             </li>
@@ -63,8 +64,8 @@
                 Stir to mix.
             </li>
             <li>To thicken the broth, create a thickening mixture with
-                starch and water. Pour in the mixture in three separate
-                intervals, mixing gently after each. Afterwards, sprinkle
+                starch and water. Pour the mixture in three separate
+                intervals, mixing gently each time. Afterwards, sprinkle
                 some scallions on top, turn the heat off, and plate it.
             </li>
             <li>Sprinkle some peppercorn powder and scallion on top of the 
