--- a/index.html
+++ b/index.html
@@ -3,14 +3,15 @@
     <head>
         <meta charset="UTF-8">
         <title>Odin Recipes</title>
+        <link rel="stylesheet" href="style.css">
     </head>
 
     <body>
         <h1>Odin Recipes</h1>
         <ul>
-            <li><a href="./recipes/lamb-pilaf.html">Uyghur Lamb Pilaf</a></li>
-            <li><a href="./recipes/big-plate-chicken.html">Big Plate Chicken</a></li>
-            <li><a href="./recipes/mapo-tofu.html">Mapo Tofu</a></li>
+            <li><a href="./recipes/lamb-pilaf.html" id="big-lamb" class="same">Uyghur Lamb Pilaf</a></li>
+            <li><a href="./recipes/big-plate-chicken.html" id="chicken" class="same">Big Plate Chicken</a></li>
+            <li><a href="./recipes/mapo-tofu.html" id="tofu" >Mapo Tofu</a></li>
         </ul>
     </body>
 </html>
