Add css styling to each recipe webpage

--- a/recipes/big-plate-chicken.html
+++ b/recipes/big-plate-chicken.html
@@ -3,12 +3,13 @@
     <head>
         <meta charset="UTF-8">
         <title>Big Plate Chicken</title>
+        <link rel="stylesheet" href="style.css">
     </head>
 
     <body>
-        <h1>Big Plate Chicken</h1>
-        <img src="../images/big-plate-chicken.jpg" alt="Colorful dish with
-        chicken, potatoes, green and red peppers, on wide flat noodles">
+        <h1 id="h1chicken">Big Plate Chicken</h1>
+        <div class="photo"><img src="../images/big-plate-chicken.jpg" alt="Colorful dish with
+        chicken, potatoes, green and red peppers, on wide flat noodles"></div>
         
         <h2>Description</h2>
         <p>Big Plate Chicken (Da pan ji) is one of the most famous Uyghur
@@ -101,8 +102,10 @@
             </li>
         </ol>
 
-        <a href="https://www.dolanchick.com/blog-uyghur-food-recipes/how-to-make-chicken-stew-big-plate-chicken-da-pan-ji">
+        <div class="link">
+            <a href="https://www.dolanchick.com/blog-uyghur-food-recipes/how-to-make-chicken-stew-big-plate-chicken-da-pan-ji">
             Link to original recipe
-        </a>
+            </a>
+        </div>
     </body>
 </html>
