--- a/recipes/lamb-pilaf.html
+++ b/recipes/lamb-pilaf.html
@@ -3,14 +3,15 @@
     <head>
         <meta charset="UTF-8">
         <title>Lamb Pilaf Rice</title>
+        <link rel="stylesheet" href="style.css">
     </head>
 
     <body>
-        <h1>Uyghur Lamb Pilaf</h1>
-        <img src="../images/lamb-pilaf.jpg" alt="a colorful plate with lamb, 
-        rice, and carrots" width="750" height="1125">
+        <h1 id="h1pilaf">Uyghur Lamb Pilaf</h1>
+        <div class="photo"><img src="../images/lamb-pilaf.jpg" alt="a colorful plate with lamb, 
+        rice, and carrots" width="750" height="1125"></div>
         
-        <h2>Description</h2>
+        <h2 class="description">Description</h2>
         <p>Lamb pilaf is one of the main staple traditional dishes of the
             Uyghur people in China. It's typically eaten with families, 
             friends, and neighbors in a communal setting, but you may also
@@ -69,8 +70,10 @@
             <li>Serve.</li>
         </ol>
 
-        <a href="https://www.youtube.com/watch?v=Z9iF5psCn80">Link to original 
+        <div class="link">
+            <a href="https://www.youtube.com/watch?v=Z9iF5psCn80">Link to original 
             recipe
-        </a>
+            </a>
+        </div>
     </body>
 </html>
