--- a/recipes/mapo-tofu.html
+++ b/recipes/mapo-tofu.html
@@ -3,11 +3,12 @@
     <head>
         <meta charset="UTF-8">
         <title>Mapo Tofu</title>
+        <link rel="stylesheet" href="style.css">
     </head>
     <body>
-        <h1>Mapo Tofu</h1>
-        <img src="../images/mapo-tofu.jpg" alt="A plate of spicy tofu on 
-        ground pork with scallion sprinkled on top">
+        <h1 id="h1tofu">Mapo Tofu</h1>
+        <div class="photo"><img src="../images/mapo-tofu.jpg" alt="A plate of spicy tofu on 
+        ground pork with scallion sprinkled on top"></div>
 
         <h2>Description</h2>
         <p>Mapo tofu is one of, if not the most well known Sichuanese food
@@ -47,9 +48,12 @@
                 off the heat.
             </li>
             <li>On a cutting board, chop up about 3 spoonful of Bean paste 
-                (Dou ban jiang) and a couple fermented black beans together. 
+                (Dou ban jiang) and a couple fermented black beans together.
+                Put aside for use later. 
             </li>
-            <li>Mince up some scallion, ginger, and garlic.</li>
+            <li>Mince up some scallion, ginger, and garlic. Put aside for 
+                use later.
+            </li>
             <li>In a hot pan, add in oil. Add in the ground pork and cook 
                 until the color changes. Then add in the bean paste mixture.
                 Cook to cover all the meat. Add in the minced 
@@ -61,7 +65,7 @@
             </li>
             <li>Add in water and bring to boil.</li>
             <li>Once boiled, add in the tofu and some peppercorn powder. 
-                Stir to mix.
+                Stir to mix. Careful to not break the tofu apart.
             </li>
             <li>To thicken the broth, create a thickening mixture with
                 starch and water. Pour the mixture in three separate
@@ -73,6 +77,8 @@
             </li>
         </ol>
 
-        <a href="https://www.dealmoon.com/guide/946743">Link to original recipe</a>
+        <div class="link">
+            <a href="https://www.dealmoon.com/guide/946743">Link to original recipe</a>
+        </div>
     </body>
 </html>
