--- a/index.html
+++ b/index.html
@@ -7,11 +7,13 @@
     </head>
 
     <body>
-        <h1>Odin Recipes</h1>
-        <ul>
-            <li><a href="./recipes/lamb-pilaf.html" id="big-lamb" class="same">Uyghur Lamb Pilaf</a></li>
-            <li><a href="./recipes/big-plate-chicken.html" id="chicken" class="same">Big Plate Chicken</a></li>
-            <li><a href="./recipes/mapo-tofu.html" id="tofu" >Mapo Tofu</a></li>
-        </ul>
+        <div class="box">
+            <h1 class="title">Odin Recipes</h1>
+            <ul>
+                <li class="list-box"><a href="./recipes/lamb-pilaf.html" id="big-lamb">Uyghur Lamb Pilaf</a></li>
+                <li class="list-box"><a href="./recipes/big-plate-chicken.html" id="chicken">Big Plate Chicken</a></li>
+                <li class="list-box"><a href="./recipes/mapo-tofu.html" id="tofu" >Mapo Tofu</a></li>
+            </ul>
+        </div>
     </body>
 </html>
